<resources>
    <string name="app_name">TaskWithFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convert">Convert</string>
    <string name="iban">IBAN</string>
    <string name="submit">Submit</string>
    <string name="main">Main</string>
    <string name="currencies">Currencies</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="aed">AED</string>
    <string name="eur">EUR</string>
    <string name="kwd">KWD</string>
</resources>