<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Currency">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStarter"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="40dp">


                <LinearLayout
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/kuwaitflag"
                        android:layout_marginTop="10sp"
                        android:contentDescription="Kuwait flag" />


                    <TextView
                        android:id="@+id/KDVi1ew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/kwd"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"/>


                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:inputType="number"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        android:autofillHints="Please enter number" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewStarter"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:text="@string/convert" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStarter1"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button2"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp">


                <LinearLayout
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/euflag"
                        android:layout_marginTop="10sp"/>


                    <TextView
                        android:id="@+id/EURView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/eur"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"/>


                    <TextView
                        android:id="@+id/EURValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStarter2"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardViewStarter1"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp">


                <LinearLayout
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/emiratesflag"
                        android:layout_marginTop="10sp"/>


                    <TextView
                        android:id="@+id/AEDView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/aed"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"/>


                    <TextView
                        android:id="@+id/AEDValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStarter3"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardViewStarter2"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp">


                <LinearLayout
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/usflag"
                        android:layout_marginTop="10sp"/>


                    <TextView
                        android:id="@+id/USDView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/usd"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"/>


                    <TextView
                        android:id="@+id/USDValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewStarter4"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardViewStarter3"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp">


                <LinearLayout
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ukflag"
                        android:layout_marginTop="10sp"/>


                    <TextView
                        android:id="@+id/GBPView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/gbp"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"/>


                    <TextView
                        android:id="@+id/GBPValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </RelativeLayout>
    </ScrollView>

</FrameLayout>
